--- a/Source/User/src/Lang/td_en_US.properties
+++ b/Source/User/src/Lang/td_en_US.properties
@@ -28,3 +28,8 @@ tranfer_1 = ENTER THE RECIPIENT ACCOUNT
 tranfer_2 = AND PRESS ENTER KEY
 tranfer_pattern_err = ACCOUNT NUMBER not valid. Please try again
 tranfer_match_err = Could not find ACCOUNT NUMBER. Please try again
+
+lbPin_0 = CHANGE PIN CODE
+lbPin_1 = OLD PIN CODE
+lbPin_2 = NEW PIN CODE
+lbPin_3 = RETYPE PIN CODE
