--- a/Source/User/src/Lang/td_vi_VN.properties
+++ b/Source/User/src/Lang/td_vi_VN.properties
@@ -28,3 +28,8 @@ tranfer_1 = NH\u1eacP S\u1ed0 T\u00c0I KHO\u1ea2N NG\u01af\u1edcI NH\u1eacN
 tranfer_2 = V\u00c0 NH\u1ea4N ENTER
 tranfer_pattern_err = STK kh\u00f4ng h\u1ee3p l\u1ec7. Vui l\u00f2ng th\u1eed l\u1ea1i
 tranfer_match_err = Kh\u00f4ng th\u1ec3 t\u00ecm th\u1ea5y STK. Vui l\u00f2ng th\u1eed l\u1ea1i
+
+lbPin_0 = \u0110\u1ed4I M\u00c3 PIN
+lbPin_1 = M\u00c3 PIN C\u0168
+lbPin_2 = M\u00c3 PIN M\u1edaI
+lbPin_3 = NH\u1eacP L\u1ea0I M\u00c3 PIN
