update PIN CODE

--- a/Source/User/src/Lang/td.properties
+++ b/Source/User/src/Lang/td.properties
@@ -33,3 +33,6 @@ lbPin_0 = \u0110\u1ed4I M\u00c3 PIN
 lbPin_1 = M\u00c3 PIN C\u0168
 lbPin_2 = M\u00c3 PIN M\u1edaI
 lbPin_3 = NH\u1eacP L\u1ea0I M\u00c3 PIN
+pin_null = M\u00c3 PIN KH\u00d4NG \u0110\u01af\u1ee2C R\u1ed6NG!
+pinN_null = M\u00c3 PIN M\u1edaI KH\u00d4NG \u0110\u01af\u1ee2C R\u1ed6NG!
+pin_retype = M\u00c3 PIN M\u1edaI = NH\u1eacP L\u1ea0I M\u00c3 PIN!
