--- a/Source/User/src/Lang/td_en_US.properties
+++ b/Source/User/src/Lang/td_en_US.properties
@@ -33,3 +33,6 @@ lbPin_0 = CHANGE PIN CODE
 lbPin_1 = OLD PIN CODE
 lbPin_2 = NEW PIN CODE
 lbPin_3 = RETYPE PIN CODE
+pin_null = PIN CODE NOT NULL!
+pinN_null = NEW PIN CODE NOT NULL!
+pin_retype = NEW PIN CODE = RETYPE PIN CODE!
